--- a/Mission4/app/src/main/res/layout/activity_main.xml
+++ b/Mission4/app/src/main/res/layout/activity_main.xml
@@ -22,12 +22,14 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline"
-        android:gravity="top" />
+        android:gravity="top"
+        android:background="@drawable/back"/>
 
     <LinearLayout
         android:id="@+id/byte_constraints"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginRight="16dp"
         app:layout_constraintTop_toBottomOf="@+id/horizontal_guideline"
         android:gravity="right"
         android:orientation="horizontal">
