--- a/Mission4/app/src/main/res/layout/activity_main.xml
+++ b/Mission4/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         app:layout_constraintGuide_percent="0.8"/>
 
     <android.support.v7.widget.AppCompatEditText
-        android:id="@+id/textInput"
+        android:id="@+id/editText"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="8dp"
@@ -25,8 +25,7 @@
         android:gravity="top"
         android:background="@drawable/back"
         android:lineSpacingExtra="15dp"
-        android:textSize="45sp"
-        android:text="안녕하세요나야나\n그래안녕하냐바보"/>
+        android:textSize="45sp" />
 
     <LinearLayout
         android:id="@+id/byte_constraints"
@@ -38,15 +37,23 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/entered_bytes"
+            android:id="@+id/current_char"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0"/>
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/slash"/>
+        <TextView
+            android:id="@+id/max_char"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@string/max_bytes" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/bytes"/>
     </LinearLayout>
 
     <LinearLayout
