--- a/Mission4/app/src/main/res/layout/activity_main.xml
+++ b/Mission4/app/src/main/res/layout/activity_main.xml
@@ -63,6 +63,7 @@
         app:layout_constraintTop_toBottomOf="@+id/byte_constraints"
         android:orientation="horizontal">
         <Button
+            android:id="@+id/submit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
