--- a/Mission5/app/src/main/res/layout/activity_menu.xml
+++ b/Mission5/app/src/main/res/layout/activity_menu.xml
@@ -18,6 +18,7 @@
         android:text="@string/manage_customer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClickMenu"
         app:layout_constraintTop_toBottomOf="@+id/vertical_start"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
@@ -27,6 +28,7 @@
         android:text="@string/manage_income"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClickMenu"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/manage_customer"
@@ -37,6 +39,7 @@
         android:text="@string/manage_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClickMenu"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/manage_income"
