--- a/Mission6/app/src/main/res/layout/activity_menu.xml
+++ b/Mission6/app/src/main/res/layout/activity_menu.xml
@@ -6,12 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.example.user.mission6.MenuActivity">
 
-    <android.support.constraint.Guideline
-        android:id="@+id/horizontal_center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.4"/>
+    <include layout="@layout/horizontal_center_guideline" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -25,6 +20,7 @@
             android:id="@+id/manage_customer_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="onClickManageCustomer"
             android:text="@string/manage_customer" />
 
         <android.support.v7.widget.AppCompatButton
@@ -32,6 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:onClick="onClickManageIncome"
             android:text="@string/manage_income" />
 
         <android.support.v7.widget.AppCompatButton
@@ -39,6 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:onClick="onClickManageItem"
             android:text="@string/manage_item" />
 
     </LinearLayout>
