--- a/Mission7/app/src/main/res/layout/activity_main.xml
+++ b/Mission7/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginRight="24dp"
-                android:inputType="text" />
+                android:inputType="number"
+                android:maxLength="3"/>
         </LinearLayout>
     </LinearLayout>
 
@@ -88,6 +89,7 @@
 
     <Button
         android:id="@+id/save_button"
+        android:onClick="onClickSaveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
