--- a/Mission7/app/src/main/res/layout/activity_main.xml
+++ b/Mission7/app/src/main/res/layout/activity_main.xml
@@ -81,6 +81,7 @@
 
     <Button
         android:id="@+id/birth_button"
+        android:onClick="onClickBirthButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/birth_label"
