--- a/Mission8/app/src/main/res/layout/activity_main.xml
+++ b/Mission8/app/src/main/res/layout/activity_main.xml
@@ -4,33 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center_horizontal"
+    android:orientation="vertical"
     tools:context="com.example.user.mission8.MainActivity">
 
     <Button
         android:id="@+id/search_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/ic_keyboard_arrow_down_black_24px"
         android:paddingLeft="31dp"
-        android:paddingRight="31dp"
-        android:drawableLeft="@drawable/ic_keyboard_arrow_down_black_24px" />
+        android:paddingRight="31dp" />
 
     <LinearLayout
         android:id="@+id/search_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
+
         <android.support.v7.widget.AppCompatEditText
+            android:id="@+id/url_input"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
+
         <Button
             android:id="@+id/search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/move"/>
+            android:text="@string/move" />
     </LinearLayout>
 
     <WebView
