--- a/Mission8/app/src/main/res/layout/activity_main.xml
+++ b/Mission8/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:drawableLeft="@drawable/ic_keyboard_arrow_down_black_24px"
         android:paddingLeft="31dp"
+        android:onClick="onClickSearchButton"
         android:paddingRight="31dp" />
 
     <LinearLayout
