--- a/Mission8/app/src/main/res/layout/activity_main.xml
+++ b/Mission8/app/src/main/res/layout/activity_main.xml
@@ -28,12 +28,14 @@
             android:id="@+id/url_input"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:inputType="textUri"
             android:layout_weight="1" />
 
         <Button
             android:id="@+id/search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="onClickSearch"
             android:text="@string/move" />
     </LinearLayout>
 
